# mini-merkle

./: Cargo.toml  bench.mjs  build.rs  index.d.ts  index.js  package-lock.json  package.json  test.mjs
.github/workflows/: CI.yml
__test__/: index.spec.mjs
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
schemas/: merkletree.proto
src/: lib.rs
